--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,6 +25,8 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8"
   },
@@ -40,3 +42,4 @@
     "typescript": "^5"
   }
 }
+
